old version of code.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.CSDb.jar=C:\\Users\\User\\Desktop\\database\\CSDb.jar
+file.reference.CSDb.jar-2=C:\\Users\\User\\Desktop\\database\\CSDb.jar
 file.reference.mysql.jar=C:\\Users\\User\\Desktop\\database\\mysql.jar
+file.reference.mysql.jar-2=C:\\Users\\User\\Desktop\\database\\mysql.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -123,7 +125,9 @@ javac.classpath=\
     ${file.reference.CSDb.jar}:\
     ${file.reference.mysql.jar}:\
     ${file.reference.CSDb.jar-1}:\
-    ${file.reference.mysql.jar-1}
+    ${file.reference.mysql.jar-1}:\
+    ${file.reference.CSDb.jar-2}:\
+    ${file.reference.mysql.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
