--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,21 +29,18 @@ dist.jar=${dist.dir}/BankSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.CSDb.jar=D:\\Program&lib\\javaDB\\CSDb.jar
-file.reference.CSDb.jar-1=C:\\Users\\\u0e40\u0e21\u0e22\u0e4c\\Desktop\\cslib\\CSDb.jar
-file.reference.mysql.jar=D:\\Program&lib\\javaDB\\mysql.jar
-file.reference.mysql.jar-1=C:\\Users\\\u0e40\u0e21\u0e22\u0e4c\\Desktop\\cslib\\mysql.jar
+file.reference.CSDb.jar=C:\\Users\\User\\Desktop\\database\\CSDb.jar
+file.reference.mysql.jar=C:\\Users\\User\\Desktop\\database\\mysql.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.CSDb.jar}:\
-    ${file.reference.mysql.jar}:\
-    ${file.reference.CSDb.jar-1}:\
-    ${file.reference.mysql.jar-1}
+    ${file.reference.mysql.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
